[workspace]
resolver = "2"
members = [
  "crates/*",  # kornia-rs main library crates
  "examples/*",  # kornia examples as standalone projects
  "kornia-cpp",  # kornia-rs C++ bindings
  "kornia-py",  # kornia-rs python bindings
]
exclude = ["examples/dora"]
default-members = ["crates/*"]

[workspace.package]
version = "0.1.11-rc.1"
authors = ["kornia.org <edgar@kornia.org>"]
edition = "2021"
rust-version = "1.82"
description = "Low-level 3D computer vision library in Rust"
readme = "README.md"
homepage = "http://kornia.org"
repository = "https://github.com/kornia/kornia-rs"
license = "Apache-2.0"
license-file = "LICENSE"
categories = ["computer-vision", "science::robotics"]
include = ["Cargo.toml"]

[workspace.dependencies]
approx = "0.5"
argh = "0.1"
arrow = "57"
# TODO: update to version 3 but it requires some changes in the codebase
bincode = { version = "2", features = ["derive"] }
candle-core = { version = "0.9.1" }
candle-examples = { version = "0.9.1" }
candle-nn = { version = "0.9.1" }
candle-transformers = { version = "0.9.1" }
criterion = "0.8"
ctrlc = "3.4"
env_logger = "0.11"
faer = "=0.20.1"
hf-hub = "0.4.2"
indicatif = { version = "0.18.3", features = ["rayon"] }
# NOTE: remember to update the kornia-py package version in `kornia-py/Cargo.toml` when updating the Rust package version
kornia = { path = "crates/kornia", version = "0.1.11-rc.1" }
kornia-3d = { path = "crates/kornia-3d", version = "0.1.11-rc.1" }
kornia-algebra = { path = "crates/kornia-algebra", version = "0.1.11-rc.1" }
kornia-apriltag = { path = "crates/kornia-apriltag", version = "0.1.11-rc.1" }
kornia-bow = { path = "crates/kornia-bow", version = "0.1.11-rc.1" }
kornia-image = { path = "crates/kornia-image", version = "0.1.11-rc.1" }
kornia-imgproc = { path = "crates/kornia-imgproc", version = "0.1.11-rc.1" }
kornia-io = { path = "crates/kornia-io", version = "0.1.11-rc.1" }
kornia-tensor = { path = "crates/kornia-tensor", version = "0.1.11-rc.1" }
kornia-tensor-ops = { path = "crates/kornia-tensor-ops", version = "0.1.11-rc.1" }
kornia-vlm = { path = "crates/kornia-vlm", version = "0.1.11-rc.1" }
log = "0.4"
num-traits = "0.2"
rand = "0.9"
rayon = "1.11"
rerun = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.10"
thiserror = "2"
tokenizers = { version = "0.21.1", features = ["http"] }
walkdir = "2.5"
