[workspace]
resolver = "2"
members = [
  "crates/*",  # kornia-rs main library crates
  "examples/*",  # kornia examples as standalone projects
  "kornia-cpp",  # kornia-rs C++ bindings
  "kornia-py",  # kornia-rs python bindings
]
exclude = ["examples/cuda_imgproc", "examples/dora"]
default-members = ["crates/*"]

[workspace.package]
version = "0.1.14"
authors = ["kornia.org <edgar@kornia.org>"]
edition = "2021"
rust-version = "1.89"
description = "Low-level 3D computer vision library in Rust"
readme = "README.md"
homepage = "http://kornia.org"
repository = "https://github.com/kornia/kornia-rs"
license = "Apache-2.0"
license-file = "LICENSE"
categories = ["computer-vision", "science::robotics"]
include = ["Cargo.toml"]

[workspace.dependencies]
approx = "0.5"
argh = "0.1"
arrow = "58"
# TODO: update to version 3 but it requires some changes in the codebase
bincode = { version = "2", features = ["derive"] }
candle-core = { version = "0.10.2" }
candle-examples = { version = "0.10.2" }
candle-flash-attn = { version = "0.10.2" }
candle-nn = { version = "0.10.2" }
candle-transformers = { version = "0.10.2" }
circular-buffer = "1.1"
criterion = "0.8"
ctrlc = "3.5"
cudarc = "0.19"
env_logger = "0.11"
# Pinned exact version: faer has significant API breaks between minor releases;
# update only after auditing our Schur/PGO decomposition code in kornia-3d.
faer = "=0.22.6"
glam = "0.33"
gstreamer = "0.24"
gstreamer-app = "0.24"
gstreamer-video = "0.24"
half = { version = "2.7", features = ["num-traits"] }
hf-hub = "0.5.0"
image = "0.25"
imageproc = "0.26"
indicatif = { version = "0.18.4", features = ["rayon"] }
kiddo = "5.3"
# NOTE: remember to update the kornia-py package version in `kornia-py/Cargo.toml` when updating the Rust package version
kornia = { path = "crates/kornia", version = "0.1.14" }
kornia-3d = { path = "crates/kornia-3d", version = "0.1.14" }
kornia-algebra = { path = "crates/kornia-algebra", version = "0.1.14" }
kornia-apriltag = { path = "crates/kornia-apriltag", version = "0.1.14" }
kornia-bow = { path = "crates/kornia-bow", version = "0.1.14" }
kornia-image = { path = "crates/kornia-image", version = "0.1.14" }
kornia-imgproc = { path = "crates/kornia-imgproc", version = "0.1.14" }
kornia-io = { path = "crates/kornia-io", version = "0.1.14" }
kornia-tensor = { path = "crates/kornia-tensor", version = "0.1.14" }
kornia-tensor-ops = { path = "crates/kornia-tensor-ops", version = "0.1.14" }
kornia-vlm = { path = "crates/kornia-vlm", version = "0.1.14" }
log = "0.4"
minijinja = { version = "2.20", features = ["loader"] }
nalgebra = "0.35"
ndarray = "0.17"
num-traits = "0.2"
num2words = "1.2"
numpy = "0.28"
pyo3 = "0.28"
rand = "0.10"
rayon = "1.12"
rustc-hash = "2"
# Use native-tls (OS TLS) instead of reqwest's default rustls+aws-lc-rs: aws-lc-sys
# fails to C-build on macOS-arm64 CI. native-tls/openssl-sys is ALREADY in the
# workspace graph (via hf-hub), so this reuses an existing dependency with no new
# build deps. (reqwest is a dev-dependency, used by the gstreamer bench to download
# a test video.)
reqwest = { version = "0.13", default-features = false, features = [
  "blocking",
  "native-tls"
] }
rerun = "0.30"
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.5"
serde_json = "1"
tempfile = "3.27"
thiserror = "2"
tokenizers = { version = "0.22.2", features = ["http"] }
walkdir = "2.5"
wide = "1.4"

[workspace.lints.rust]
unsafe_code = "warn"

# Release wheels and binaries ship the SIMD-vectorized hot paths with
# cross-crate inlining enabled. ThinLTO + single codegen unit lets the
# `cpu_features()` dispatcher inline into callers in `kornia-py`, collapsing
# NEON / AVX2 / scalar selection to a branch on a constant after one warmup.
[profile.release]
lto = "thin"
codegen-units = 1
