[workspace]
resolver = "2"
members = [
  "crates/*",  # kornia-rs main library crates
  "examples/*",  # kornia examples as standalone projects
  "kornia-cpp",  # kornia-rs C++ bindings
  "kornia-py",  # kornia-rs python bindings
]
exclude = ["examples/dora"]
default-members = ["crates/*"]

[workspace.package]
version = "0.1.15-rc.4"
authors = ["kornia.org <edgar@kornia.org>"]
edition = "2021"
rust-version = "1.89"
description = "Low-level 3D computer vision library in Rust"
readme = "README.md"
homepage = "http://kornia.org"
repository = "https://github.com/kornia/kornia-rs"
license = "Apache-2.0"
license-file = "LICENSE"
categories = ["computer-vision", "science::robotics"]
include = ["Cargo.toml"]

[workspace.dependencies]
approx = "0.5"
argh = "0.1"
arrow = "59"
# TODO: update to version 3 but it requires some changes in the codebase
bincode = { version = "2", features = ["derive"] }
# Pinned below 0.11: candle-core 0.11.0's NEON f16 path references the unstable
# `float16x8_t` type without a nightly gate, breaking builds wherever the `fp16`
# target feature is enabled (macOS CI, and aarch64 Linux since we force +fp16 there).
# Still unfixed upstream as of https://github.com/huggingface/candle/commit/39355c6c.
# Bump back to "0.11" once that's resolved.
candle-core = { version = "0.10.2" }
candle-flash-attn = { version = "0.10.2" }
candle-nn = { version = "0.10.2" }
candle-transformers = { version = "0.10.2" }
circular-buffer = "2.0"
criterion = "0.8"
ctrlc = "3.5"
cudarc = "0.19"
env_logger = "0.11"
faer = "=0.24.4"
glam = "0.33"
gstreamer = "0.25"
gstreamer-app = "0.25"
gstreamer-video = "0.25"
half = { version = "2.7", features = ["num-traits"] }
hf-hub = "0.5.0"
image = "0.25"
imageproc = "0.27"
indicatif = { version = "0.18.4", features = ["rayon"] }
kiddo = "5.3"
# NOTE: remember to update the kornia-py package version in `kornia-py/Cargo.toml` when updating the Rust package version
kornia = { path = "crates/kornia", version = "0.1.15-rc.4" }
kornia-3d = { path = "crates/kornia-3d", version = "0.1.15-rc.4" }
kornia-algebra = { path = "crates/kornia-algebra", version = "0.1.15-rc.4" }
kornia-apriltag = { path = "crates/kornia-apriltag", version = "0.1.15-rc.4" }
kornia-bow = { path = "crates/kornia-bow", version = "0.1.15-rc.4" }
kornia-image = { path = "crates/kornia-image", version = "0.1.15-rc.4" }
kornia-imgproc = { path = "crates/kornia-imgproc", version = "0.1.15-rc.4" }
kornia-io = { path = "crates/kornia-io", version = "0.1.15-rc.4" }
kornia-tensor = { path = "crates/kornia-tensor", version = "0.1.15-rc.4" }
kornia-tensor-ops = { path = "crates/kornia-tensor-ops", version = "0.1.15-rc.4" }
kornia-vlm = { path = "crates/kornia-vlm", version = "0.1.15-rc.4" }
log = "0.4"
minijinja = { version = "2.20", features = ["loader"] }
nalgebra = "0.35"
ndarray = "0.17"
num-traits = "0.2"
num2words = "1.2"
numpy = "0.28"
pyo3 = "0.28"
rand = "0.10"
rayon = "1.12"
# Use native-tls (OS TLS) instead of reqwest's default rustls+aws-lc-rs: aws-lc-sys
# fails to C-build on macOS-arm64 CI. native-tls/openssl-sys is ALREADY in the
# workspace graph (via hf-hub), so this reuses an existing dependency with no new
# build deps. (reqwest is a dev-dependency, used by the gstreamer bench to download
# a test video.)
reqwest = { version = "0.13", default-features = false, features = [
  "blocking",
  "native-tls"
] }
rerun = "0.30"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.5"
serde_json = "1"
tempfile = "3.27"
thiserror = "2"
tokenizers = { version = "0.23.1", features = ["http"] }
walkdir = "2.5"
wide = "1.4"

[workspace.lints.rust]
unsafe_code = "warn"

# Release wheels and binaries ship the SIMD-vectorized hot paths with
# cross-crate inlining enabled. ThinLTO + single codegen unit lets the
# `cpu_features()` dispatcher inline into callers in `kornia-py`, collapsing
# NEON / AVX2 / scalar selection to a branch on a constant after one warmup.
[profile.release]
lto = "thin"
codegen-units = 1
