[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]


[project]
name = "kornia_rs"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
