[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "kornia_rs"
description = "Low level implementations for computer vision in Rust"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
keywords = ["computer vision", "rust"]
authors = [
    {email = "edgar@kornia.org"},
    {name = "Edgar Riba"}
]
maintiners = [
    {email = "edgar@kornia.org"},
    {name = "Edgar Riba"}

]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "kornia==0.6.3",
  "numpy",
]

[project.urls]
homepage = "https://www.kornia.org"
documentation = "https://kornia.readthedocs.io"
repository = "https://github.com/kornia/kornia-rs"