[package]
name = "kornia-cpp"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = "C++ bindings for Kornia Rust library"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
cxx = "1.0"
kornia-image = { workspace = true }
kornia-io = { workspace = true }
paste = "1.0"

[build-dependencies]
cxx-build = "1.0"
