[package]
name = "kornia-py"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = "Python bindings for Kornia Rust library"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
publish = false

[lib]
crate-type = ["cdylib"]
name = "kornia_rs"

[dependencies]
dlpack-rs = { git = "https://github.com/kornia/dlpack-rs", tag = "v0.3.2", features = [
  "pyo3"
] }
kornia-3d = { workspace = true }
kornia-algebra = { workspace = true }
kornia-apriltag = { workspace = true }
kornia-image = { workspace = true }
kornia-imgproc = { workspace = true }
kornia-io = { workspace = true }
numpy = { workspace = true }
pyo3 = { workspace = true, features = ["extension-module"] }
rand = { workspace = true }
rayon = { workspace = true }

[features]
default = ["turbojpeg"]
turbojpeg = ["kornia-io/turbojpeg"]
# Native V4L2 webcam capture (Linux-only; no system runtime deps).
v4l = ["kornia-io/v4l"]
