[package]
name = "kornia-py"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = "Python bindings for Kornia Rust library"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
publish = false

[lib]
crate-type = ["cdylib"]
name = "kornia_rs"

[dependencies]
cudarc = { workspace = true, optional = true }
dlpack-rs = { version = "0.3.3", features = ["pyo3"] }
half = { workspace = true, optional = true }
kornia-3d = { workspace = true }
kornia-algebra = { workspace = true }
kornia-apriltag = { workspace = true }
kornia-image = { workspace = true }
kornia-imgproc = { workspace = true }
kornia-io = { workspace = true }
kornia-tensor = { workspace = true, optional = true }
numpy = { workspace = true }
pyo3 = { workspace = true, features = ["extension-module"] }
rand = { workspace = true }
rayon = { workspace = true }

[features]
default = ["turbojpeg"]
# GPU color conversions + fused preprocessing (cudarc dynamic-loading: builds
# without CUDA; activates at runtime when libcuda/libnvrtc are present).
cuda = [
  "dep:cudarc",
  "dep:half",
  "dep:kornia-tensor",
  "kornia-image/cudarc",
  "kornia-imgproc/cudarc",
  "kornia-imgproc/gpu-cuda",
  "kornia-tensor/cudarc",
  "kornia-tensor/dlpack",
]
turbojpeg = ["kornia-io/turbojpeg"]
