[package]
name = "kornia-py"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = "Python bindings for Kornia Rust library"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
publish = false

[lib]
crate-type = ["cdylib"]
name = "kornia_rs"

[dependencies]
cudarc = { workspace = true, optional = true }
dlpack-rs = { version = "0.3.3", features = ["pyo3"] }
half = { workspace = true }
kornia-3d = { workspace = true }
kornia-algebra = { workspace = true }
kornia-apriltag = { workspace = true }
kornia-image = { workspace = true }
kornia-imgproc = { workspace = true }
kornia-io = { workspace = true }
# Base (host) Tensor + DLPack support is unconditional — `Tensor`/`Preprocessor`
# work on CPU-only builds too. Only `kornia-tensor/cuda` (device support) is
# gated behind this crate's own `cuda` feature, below.
kornia-tensor = { workspace = true, features = ["dlpack"] }
numpy = { workspace = true }
pyo3 = { workspace = true, features = ["extension-module", "multiple-pymethods"] }
rand = { workspace = true }
rayon = { workspace = true }

[features]
default = ["turbojpeg"]
# Device (GPU) support: color conversions, device Image residency, and the
# CUDA path of Tensor/Preprocessor (cudarc dynamic-loading: builds without
# CUDA; activates at runtime when libcuda/libnvrtc are present). Tensor and
# Preprocessor themselves are NOT gated by this — they run CPU-only without
# it — only their device-resident branches are.
cuda = [
  "dep:cudarc",
  "kornia-image/cuda",
  "kornia-imgproc/cuda",
  "kornia-tensor/cuda",
]
turbojpeg = ["kornia-io/turbojpeg"]
