[project]
name = "kornia_rs"
description = "Low level implementations for computer vision in Rust"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Edgar Riba", email = "edgar@kornia.org" }]
maintainers = [{ name = "Edgar Riba", email = "edgar@kornia.org" }]
keywords = [
  "computer vision",
  "rust",
  "image-processing",
  "deep-learning",
  "machine-learning",
  "pytorch",
  "tensor",
  "augmentation",
  "opencv-alternative",
  "camera",
  "video-processing",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: GPU",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Free Threading :: 3 - Stable",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]

[project.urls]
documentation = "https://kornia.readthedocs.io"
homepage = "http://www.kornia.org"
repository = "https://github.com/kornia/kornia-rs"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-run-parallel",
  "numpy",
  "torch",
]

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
