[package]
name = "kornia-serve"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
env_logger = "0.11.3"
kornia-rs = { workspace = true }
indicatif = { version = "0.17.8", features=["rayon"] }
log = "0.4"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower = "0.4.13"
walkdir = "2.3.2"
