[package]
name = "kornia-serve"
authors.workspace = true
description = "Kornia serving library for computer vision and deep learning"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]

# kornia
kornia-rs.workspace = true

# external
axum = "0.7.5"
env_logger = "0.11.3"
indicatif = { version = "0.17.8", features = ["rayon"] }
log = "0.4"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower = "0.4.13"
walkdir = "2.3.2"
