[package]
name = "kornia-serve"
categories = ["computer-vision", "science::robotics"]
description = "Kornia serving library for computer vision and deep learning"
edition = "2021"
homepage = "http://kornia.org"
include = ["Cargo.toml"]
license = "Apache-2.0"
license-file = "LICENSE"
repository = "https://github.com/kornia/kornia-rs"
rust-version = "1.76"
version = "0.1.6+dev"

[dependencies]

# kornia
kornia = { path = "../crates/kornia", features = ["gstreamer", "jpegturbo"] }

# external
axum = "0.7.5"
env_logger = "0.11.3"
indicatif = { version = "0.17.8", features = ["rayon"] }
log = "0.4"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower = "0.4.13"
walkdir = "2.3.2"
