[package]
name = "kornia-viz"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
eframe = "0.29.1"
env_logger = "0.11.5"
log = "0.4.21"
kornia = { path = "../crates/kornia", features = ["gstreamer"] }
