[package]
name = "kornia_viz"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
eframe = { version = "0.29", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
] }
env_logger = "0.11"
log = "0.4"
#kornia = { path = "../crates/kornia" }
serde = { version = "1.0", features = ["derive"] }

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
