[package]
name = "kornia-py"
version = "0.1.1"
edition = "2021"

[lib]
name = "kornia_rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.80"
kornia-rs = { path = ".." }
dlpack-rs = {version = "^0.1.1"}
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = { version = "0.20.0" }
