[package]
name = "kernels"
description = "Low-level kernels functions for computer vision"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
num-traits.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
rand.workspace = true

[[bench]]
name = "bench_kernels"
harness = false
